force-app/main/default/objects/copado__Streaming_Setting__mdt/copado__Streaming_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Streaming Setting</label>
    <pluralLabel>Streaming Settings</pluralLabel>
</CustomObject>