force-app/main/default/objects/copado__Streaming_Setting__mdt/fields/copado__Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Channel_Name__c</fullName>
    <inlineHelpText>Streaming channel (PushTopic) name</inlineHelpText>
    <label>Channel Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>