force-app/main/default/objects/copado__Streaming_Setting__mdt/fields/copado__Enabled__c.field-meta.xml
<CustomField>
    <fullName>copado__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When enabled streaming for the given channel will be tracked for real time changes.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>