force-app/main/default/objects/copado__Streaming_Setting__mdt/fields/copado__Timeout__c.field-meta.xml
<CustomField>
    <fullName>copado__Timeout__c</fullName>
    <inlineHelpText>Streaming service for the given channel will be unsubscribed when timeout(milliseconds) has reached. Blank mean infinite.</inlineHelpText>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>